--- a/week04/code/theStyle.css
+++ b/week04/code/theStyle.css
@@ -5,9 +5,24 @@ body {
 main {
     background-color: yellow;
     padding: 10px;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 p {
     background-color: green;
     padding: 3vw;
+}
+.ocean {
+    background-color: lightblue;
+}
+
+#theFoot {
+    background-color: white;
+}
+
+details {
+    padding: 3vw;
+    background-color: red;
+    font-size: 100px;
 }
